02-infra/wave-50-repos/52-gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "52"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec: {}
