02-infra/wave-50-repos/52-gitea/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
  name: gitea-http
  namespace: gitea
spec:
  host: "gitea.PLACEHOLDER_DOMAIN"
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect 
    termination: edge
  to:
    kind: Service
    name: gitea-service-http
    weight: 100
  wildcardPolicy: None
